# WikiRaceGNN

./: .gitignore  NN.py  README.md  app.py  docker-compose.yml  environment.yml  evaluate.py  fixed_evaluator.py  graphSAGE.py  main.py  pyproject.toml  requirements.txt  run_pipeline.bat  run_pipeline.sh  test.py  tester.py  testpython.py  train.py  utils.py
models/: __init__.py  attention.py  best_model.pt  graphsage.py
static/css/: style.css
static/html/: error.html  index.html
static/js/: main.js
streamlit/: app.py
templates/: api_docs.html  base.html  index.html
traversal/: __init__.py  base.py  enhanced.py  unified.py  utils.py
utils/: __init__.py  crawler.py  data.py  evaluation.py  visualization.py  visualization_manager.py  wikibuilder.py
visuals/: 01_data_exploration.ipynb
