[tool.poetry]
name        = "wikiracegnn"
version     = "0.1.0"
description = ""
authors     = ["BonelessWater <domdd305@gmail.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python               = ">=3.11,<3.12"
neo4j                = ">=5.28.1,<6.0.0"
pandas               = ">=2.2.3,<3.0.0"
numpy                = "<2.0.0"
sentence-transformers = ">=4.1.0,<5.0.0"
requests             = ">=2.32.3,<3.0.0"
torch-geometric      = "^2.6.1"
matplotlib           = ">=3.10.1,<4.0.0"
networkx             = ">=3.4.2,<4.0.0"
scipy                = ">=1.15.2,<2.0.0"
scikit-learn = "^1.6.1"

[tool.poetry.dependencies.torch]
version = "2.0.1+cu117"
source  = "pytorch"

[[tool.poetry.source]]
name     = "pytorch"
url      = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
